// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MainLayout snapshot center 1`] = `
<div>
  <div
    class="min-w-[960px]"
  >
    <header
      class="relative flex h-[48px] items-center justify-between px-4"
    >
      <div
        class="flex flex-1 items-center gap-6"
      >
        <a
          class="flex cursor-pointer items-center gap-1"
          href="/auth/sign-in"
        >
          <img
            alt="logo"
            data-nimg="1"
            decoding="async"
            height="24"
            loading="lazy"
            src="/assets/images/logo.png"
            style="color: transparent;"
            width="24"
          />
          <svg
            class="inline-block h-[24px] w-[123px]"
            height="24"
            width="24"
          />
        </a>
        <div
          class="flex items-center gap-2"
        >
          <div
            class="flex items-center gap-2"
          >
            <div
              class="bg-fill-tertiary inline-flex rounded-sm p-1.5"
            >
              <svg
                class="inline-block text-secondary"
                height="12"
                width="12"
              />
            </div>
            <span
              class="font-12-regular"
            />
          </div>
        </div>
      </div>
      <div
        class="flex items-center gap-2 self-stretch"
      >
        <div
          class="relative"
          data-headlessui-state=""
        >
          <button
            aria-expanded="false"
            aria-haspopup="listbox"
            class="btn btn-sm btn-secondary min-w-0 px-2"
            data-headlessui-state=""
            id="headlessui-listbox-button-:r8:"
            type="button"
          >
            <svg
              class="inline-block mr-1"
              height="16"
              width="16"
            />
            <span
              class="font-12-bold uppercase"
            />
          </button>
        </div>
        <button
          class="icon-btn icon-btn-sm icon-btn-secondary"
        >
          <svg
            class="inline-block text-primary"
            height="24"
            width="24"
          />
        </button>
      </div>
    </header>
    <div
      class="bg-primary border-fill-secondary absolute left-1/2 top-1/2 min-w-[440px] -translate-x-1/2 -translate-y-1/2 rounded border p-8"
    />
    <footer
      class="font-14-bold text-secondary absolute bottom-[7%] left-1/2 z-10 -translate-x-1/2"
    >
      © ABC Studio All rights reserved
    </footer>
  </div>
  <div
    style="position: fixed; z-index: 9999; top: 16px; left: 16px; right: 16px; bottom: 16px; pointer-events: none;"
  />
</div>
`;

exports[`MainLayout snapshot default 1`] = `
<div>
  <div
    class="min-w-[960px]"
  >
    <header
      class="relative flex h-[48px] items-center justify-between px-4"
    >
      <div
        class="flex flex-1 items-center gap-6"
      >
        <a
          class="flex cursor-pointer items-center gap-1"
          href="/auth/sign-in"
        >
          <img
            alt="logo"
            data-nimg="1"
            decoding="async"
            height="24"
            loading="lazy"
            src="/assets/images/logo.png"
            style="color: transparent;"
            width="24"
          />
          <svg
            class="inline-block h-[24px] w-[123px]"
            height="24"
            width="24"
          />
        </a>
        <div
          class="flex items-center gap-2"
        >
          <div
            class="flex items-center gap-2"
          >
            <div
              class="bg-fill-tertiary inline-flex rounded-sm p-1.5"
            >
              <svg
                class="inline-block text-secondary"
                height="12"
                width="12"
              />
            </div>
            <span
              class="font-12-regular"
            />
          </div>
        </div>
      </div>
      <div
        class="flex items-center gap-2 self-stretch"
      >
        <div
          class="relative"
          data-headlessui-state=""
        >
          <button
            aria-expanded="false"
            aria-haspopup="listbox"
            class="btn btn-sm btn-secondary min-w-0 px-2"
            data-headlessui-state=""
            id="headlessui-listbox-button-:r2:"
            type="button"
          >
            <svg
              class="inline-block mr-1"
              height="16"
              width="16"
            />
            <span
              class="font-12-bold uppercase"
            />
          </button>
        </div>
        <button
          class="icon-btn icon-btn-sm icon-btn-secondary"
        >
          <svg
            class="inline-block text-primary"
            height="24"
            width="24"
          />
        </button>
      </div>
    </header>
    <div
      class="flex min-h-[calc(100vh-48px)] items-stretch"
    >
      <main
        class="mx-4 my-6 w-full overflow-x-auto"
      />
    </div>
  </div>
  <div
    style="position: fixed; z-index: 9999; top: 16px; left: 16px; right: 16px; bottom: 16px; pointer-events: none;"
  />
</div>
`;

exports[`MainLayout snapshot with sidenav 1`] = `
<div>
  <div
    class="min-w-[960px]"
  >
    <header
      class="relative flex h-[48px] items-center justify-between px-4"
    >
      <div
        class="flex flex-1 items-center gap-6"
      >
        <a
          class="flex cursor-pointer items-center gap-1"
          href="/main"
        >
          <img
            alt="logo"
            data-nimg="1"
            decoding="async"
            height="24"
            loading="lazy"
            src="/assets/images/logo.png"
            style="color: transparent;"
            width="24"
          />
          <svg
            class="inline-block h-[24px] w-[123px]"
            height="24"
            width="24"
          />
        </a>
        <div
          class="flex items-center gap-2"
        >
          <div
            class="flex items-center gap-2"
          >
            <div
              class="bg-fill-tertiary inline-flex rounded-sm p-1.5"
            >
              <svg
                class="inline-block text-secondary"
                height="12"
                width="12"
              />
            </div>
            <span
              class="font-12-regular"
            />
          </div>
        </div>
      </div>
      <div
        class="flex items-center gap-2 self-stretch"
      >
        <div
          class="relative"
          data-headlessui-state=""
        >
          <button
            aria-expanded="false"
            aria-haspopup="listbox"
            class="btn btn-sm btn-secondary min-w-0 px-2"
            data-headlessui-state=""
            id="headlessui-listbox-button-:re:"
            type="button"
          >
            <svg
              class="inline-block mr-1"
              height="16"
              width="16"
            />
            <span
              class="font-12-bold uppercase"
            />
          </button>
        </div>
        <button
          class="icon-btn icon-btn-sm icon-btn-secondary"
        >
          <svg
            class="inline-block text-primary"
            height="24"
            width="24"
          />
        </button>
      </div>
    </header>
    <div
      class="flex min-h-[calc(100vh-48px)] items-stretch"
    >
      <nav
        class="relative"
      >
        <div
          class="h-full w-[72px]"
        />
        <ul
          class="absolute left-0 top-0 z-20 h-full space-y-1 p-4"
        >
          <li>
            <a
              href="/main/project//dashboard"
            >
              <button
                class="icon-btn icon-btn-tertiary icon-btn-md w-full flex-nowrap justify-start"
              >
                <svg
                  class="inline-block "
                  height="24"
                  width="24"
                />
                <span
                  class="ml-2 hidden"
                >
                  main.dashboard.title
                </span>
              </button>
            </a>
          </li>
          <hr />
          <li>
            <a
              href="/main/project//feedback"
            >
              <button
                class="icon-btn icon-btn-tertiary icon-btn-md w-full flex-nowrap justify-start"
              >
                <svg
                  class="inline-block "
                  height="24"
                  width="24"
                />
                <span
                  class="ml-2 hidden"
                >
                  main.feedback.title
                </span>
              </button>
            </a>
          </li>
          <li>
            <a
              href="/main/project//issue"
            >
              <button
                class="icon-btn icon-btn-tertiary icon-btn-md w-full flex-nowrap justify-start"
              >
                <svg
                  class="inline-block "
                  height="24"
                  width="24"
                />
                <span
                  class="ml-2 hidden"
                >
                  main.issue.title
                </span>
              </button>
            </a>
          </li>
          <hr />
          <li>
            <a
              href="/main/project//setting"
            >
              <button
                class="icon-btn icon-btn-tertiary icon-btn-md w-full flex-nowrap justify-start"
              >
                <svg
                  class="inline-block "
                  height="24"
                  width="24"
                />
                <span
                  class="ml-2 hidden"
                >
                  main.setting.title
                </span>
              </button>
            </a>
          </li>
        </ul>
      </nav>
      <main
        class="mx-4 my-6 w-full overflow-x-auto"
      />
    </div>
  </div>
  <div
    style="position: fixed; z-index: 9999; top: 16px; left: 16px; right: 16px; bottom: 16px; pointer-events: none;"
  />
</div>
`;
